; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fetch.c_refname_hash_exists.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fetch.c_refname_hash_exists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hashmap = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hashmap*, i8*)* @refname_hash_exists to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @refname_hash_exists(%struct.hashmap* %0, i8* %1) #0 {
  %3 = alloca %struct.hashmap*, align 8
  %4 = alloca i8*, align 8
  store %struct.hashmap* %0, %struct.hashmap** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.hashmap*, %struct.hashmap** %3, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @strhash(i8* %6)
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @hashmap_get_from_hash(%struct.hashmap* %5, i32 %7, i8* %8)
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  %12 = xor i1 %11, true
  %13 = zext i1 %12 to i32
  ret i32 %13
}

declare dso_local i32 @hashmap_get_from_hash(%struct.hashmap*, i32, i8*) #1

declare dso_local i32 @strhash(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
